Making update meals button fixed at the bottom on mobile

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -1020,3 +1020,10 @@ body.forgotresettoken {
 .container-fluid {
   padding-top: 20px !important;
 }
+
+.update-meals-btn {
+  @include media-breakpoint-down(md) {
+    position: absolute;
+    bottom: 10px;
+  }
+}
